--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wendel Tytan</title>
     <link rel="stylesheet" href="css\estilos css, para html1.css">
 </head>
@@ -13,9 +14,30 @@
                 <li><a href="#">Portfólio</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
-        </nav>
-        <h1 class="site-title">Wendel Tytan</h1>
-        <h2 class="site-subtitle">web developer</h2>
+		</nav>
+		<div>
+        	<h1 class="site-title">Wendel Tytan</h1>
+			<h2 class="site-subtitle">web developer</h2>
+		</div>
     </header>
+    <section>
+		<h2 class="Portfolio">Portfólio</h2>
+		<figure>
+			<img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+			<figcaption>eCommerce</figcaption>
+		</figure>
+		<figure>
+			<img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
+			<figcaption>Mobile</figcaption>
+		</figure>
+		<figure>
+			<img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+			<figcaption>Web design</figcaption>
+		</figure>
+		<figure>
+			<img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
+			<figcaption>Projetos pessoais</figcaption>
+		</figure>
+	</section>
 </body>
 </html>
