--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wendel Tytan</title>
-    <link rel="stylesheet" href="css\estilos css, para html1.css">
+	<link rel="stylesheet" href="css\estilos css, para html1.css">
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Stardos+Stencil:wght@400;700&display=swap" rel="stylesheet"> 
+
 </head>
 <body>
     <header>
@@ -20,24 +22,26 @@
 			<h2 class="site-subtitle">web developer</h2>
 		</div>
     </header>
-    <section>
-		<h2 class="Portfolio">Portfólio</h2>
-		<figure>
-			<img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
-			<figcaption>eCommerce</figcaption>
-		</figure>
-		<figure>
-			<img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
-			<figcaption>Mobile</figcaption>
-		</figure>
-		<figure>
-			<img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
-			<figcaption>Web design</figcaption>
-		</figure>
-		<figure>
-			<img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
-			<figcaption>Projetos pessoais</figcaption>
-		</figure>
+    <section class="Portfolio">
+		<h2>Portfólio</h2>
+		<div class="grid">
+			<figure>
+				<img class="img-portfolio" src="./img/phyrexia___redux_by_applejackles_d3ewlzs-fullview.jpg" alt="Phyrexia">
+				<figcaption>Phyrexia</figcaption>
+			</figure>
+			<figure>
+				<img class="img-portfolio" src="./img/Assassins-Creed-Valhalla-728x409.jpg" alt=">Assassins">
+				<figcaption>Assassins</figcaption>
+			</figure>
+			<figure>
+				<img class="img-portfolio" src="./img/372d61008306bb1b7484de97f4be46db.jpg" alt="Umbrella">
+				<figcaption>Umbrella</figcaption>
+			</figure>
+			<figure>
+				<img class="img-portfolio" src="./img/sdfsdfsdfsdfs.jpg" alt="Projetos pessoais">
+				<figcaption>Projetos pessoais</figcaption>
+			</figure>
+		</div>
 	</section>
 </body>
 </html>
