--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <title>Wendel Tytan</title>
 	<link rel="stylesheet" href="css\estilos css, para html1.css">
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Stardos+Stencil:wght@400;700&display=swap" rel="stylesheet"> 
-
+	<script src="https://kit.fontawesome.com/b865badce4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav class="menu">
             <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Portfólio</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#Portfolio">Portfólio</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
 		</nav>
-		<div>
+		<div class="titulo">
         	<h1 class="site-title">Wendel Tytan</h1>
 			<h2 class="site-subtitle">web developer</h2>
 		</div>
     </header>
-    <section class="Portfolio">
+    <section class="Portfolio" id="Portfolio">
 		<h2>Portfólio</h2>
 		<div class="grid">
 			<figure>
@@ -41,6 +41,23 @@
 				<img class="img-portfolio" src="./img/sdfsdfsdfsdfs.jpg" alt="Projetos pessoais">
 				<figcaption>Projetos pessoais</figcaption>
 			</figure>
+		</div>
+	</section>
+	<section class="contato" id="contato">
+		<h2>Contato</h2>
+		  <div class="grid icons">
+		  <a target="_blank" href="https://github.com/WendelTytan">
+			<i class="fab fa-github"></i>
+		  </a>
+		  <a target="_blank" href="https://twitter.com/Wendel_Tytan">
+			<i class="fab fa-twitter"></i>
+		  </a>
+		  <a target="_blank" href="https://www.linkedin.com/in/wendel-tytan-25939b181/">
+			<i class="fab fa-linkedin-in"></i>
+		  </a>
+		  <a href="mailto:wendelvinicius@outlook.com.br">
+			<i class="fas fa-at"></i>
+		  </a>
 		</div>
 	</section>
 </body>
