final aula 5 kappa

--- a/index.html
+++ b/index.html
@@ -1,64 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wendel Tytan</title>
-	<link rel="stylesheet" href="css\estilos css, para html1.css">
-	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Stardos+Stencil:wght@400;700&display=swap" rel="stylesheet"> 
-	<script src="https://kit.fontawesome.com/b865badce4.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <header>
-        <nav class="menu">
-            <ul>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#Portfolio">Portfólio</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-		</nav>
-		<div class="titulo">
-        	<h1 class="site-title">Wendel Tytan</h1>
-			<h2 class="site-subtitle">web developer</h2>
-		</div>
-    </header>
-    <section class="Portfolio" id="Portfolio">
-		<h2>Portfólio</h2>
-		<div class="grid">
-			<figure>
-				<img class="img-portfolio" src="./img/phyrexia___redux_by_applejackles_d3ewlzs-fullview.jpg" alt="Phyrexia">
-				<figcaption>Phyrexia</figcaption>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Wendel Tytan</title>
+		<link rel="stylesheet" href="css\estilos css, para html1.css">
+		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Stardos+Stencil:wght@400;700&display=swap" rel="stylesheet"> 
+		<script src="https://kit.fontawesome.com/b865badce4.js" crossorigin="anonymous"></script>
+	</head>
+	<body>
+		<header>
+			<nav class="menu">
+				<ul class="container">
+					<li><a href="#sobre">Sobre</a></li>
+					<li><a href="#Portfolio">Portfólio</a></li>
+					<li><a href="#contato">Contato</a></li>
+				</ul>
+			</nav>
+			<div class="titulo">
+				<h1 class="site-title">Wendel Tytan</h1>
+				<h2 class="site-subtitle">web developer</h2>
+			</div>
+		</header>
+		<section class="sobre container">
+			<h2>Sobre</h2>
+			<figure class="avatar">
+				<img src="./img/72379731_648940028929641_8278615700025638912_n.png" alt="Tythanos">
 			</figure>
-			<figure>
-				<img class="img-portfolio" src="./img/Assassins-Creed-Valhalla-728x409.jpg" alt=">Assassins">
-				<figcaption>Assassins</figcaption>
-			</figure>
-			<figure>
-				<img class="img-portfolio" src="./img/372d61008306bb1b7484de97f4be46db.jpg" alt="Umbrella">
-				<figcaption>Umbrella</figcaption>
-			</figure>
-			<figure>
-				<img class="img-portfolio" src="./img/sdfsdfsdfsdfs.jpg" alt="Projetos pessoais">
-				<figcaption>Projetos pessoais</figcaption>
-			</figure>
-		</div>
-	</section>
-	<section class="contato" id="contato">
-		<h2>Contato</h2>
-		  <div class="grid icons">
-		  <a target="_blank" href="https://github.com/WendelTytan">
-			<i class="fab fa-github"></i>
-		  </a>
-		  <a target="_blank" href="https://twitter.com/Wendel_Tytan">
-			<i class="fab fa-twitter"></i>
-		  </a>
-		  <a target="_blank" href="https://www.linkedin.com/in/wendel-tytan-25939b181/">
-			<i class="fab fa-linkedin-in"></i>
-		  </a>
-		  <a href="mailto:wendelvinicius@outlook.com.br">
-			<i class="fas fa-at"></i>
-		  </a>
-		</div>
-	</section>
-</body>
+
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas beatae mollitia atque reprehenderit adipisci ea error esse eligendi iusto, earum harum obcaecati maiores reiciendis. Vero quae culpa at aliquam officiis!
+			</p>
+
+			<p>
+				Est culpa unde quae quisquam at ducimus fuga vel excepturi ex, corporis velit facere expedita itaque sint nemo modi sequi. Nesciunt et tempora cum similique quasi eum enim expedita laudantium.
+			</p>
+
+			<p>
+				Itaque odit explicabo natus voluptas! Dolores nostrum reiciendis expedita eveniet explicabo cum laboriosam nam natus itaque eaque necessitatibus deleniti fugit debitis, vitae neque quasi quae dolorem adipisci ipsum illum. Quaerat.
+			</p>
+
+			<p>
+				Deleniti temporibus itaque assumenda optio odit error ipsa minima, culpa, ipsum dolore perferendis? Ratione quis veniam minus officiis ipsum est, iure ducimus quasi iusto fugiat nostrum rerum adipisci a quas.
+			</p>
+
+		</section>
+		<section class="Portfolio container" id="Portfolio">
+			<h2>Portfólio</h2>
+			<div class="grid">
+				<div class="flip-card">
+					<div class="card">
+						<figure class="card-front">
+							<img class="img-portfolio" src="./img/phyrexia___redux_by_applejackles_d3ewlzs-fullview.jpg" alt="Phyrexia">
+							<figcaption>Phyrexia</figcaption>
+						</figure>
+						<div class="card-back"> 
+							All will be one
+						</div>
+					</div>
+				</div>
+				<div class="flip-card">
+					<div class="card">
+						<figure class="card-front">
+							<img class="img-portfolio" src="./img/Assassins-Creed-Valhalla-728x409.jpg" alt=">Assassins">
+							<figcaption>Assassins</figcaption>
+						</figure>
+						<div class="card-back"> 
+							Acting in the dark
+						</div>
+					</div>
+				</div>
+				<div class="flip-card">
+					<div class="card">
+						<figure class="card-front">
+							<img class="img-portfolio" src="./img/372d61008306bb1b7484de97f4be46db.jpg" alt="Umbrella">
+							<figcaption>Umbrella</figcaption>
+						</figure>
+						<div class="card-back"> 
+							Our Business is Life Itself
+						</div>
+					</div>
+				</div>
+				<div class="flip-card">
+					<div class="card">
+						<figure class="card-front">
+							<img class="img-portfolio" src="./img/sdfsdfsdfsdfs.jpg" alt="Projetos pessoais">
+							<figcaption>Projetos pessoais</figcaption>
+						</figure>
+						<div class="card-back"> 
+							O que não tem padrão é fascinante
+						</div>
+					</div>	
+				</div>		
+			</div>
+		</section>
+		<section class="contato container" id="contato">
+			<h2>Contato</h2>
+			<div class="grid icons">
+			<a target="_blank" href="https://github.com/WendelTytan">
+				<i class="fab fa-github"></i>
+			</a>
+			<a target="_blank" href="https://twitter.com/Wendel_Tytan">
+				<i class="fab fa-twitter"></i>
+			</a>
+			<a target="_blank" href="https://www.linkedin.com/in/wendel-tytan-25939b181/">
+				<i class="fab fa-linkedin-in"></i>
+			</a>
+			<a href="mailto:wendelvinicius@outlook.com.br">
+				<i class="fas fa-at"></i>
+			</a>
+			</div>
+		</section>
+	</body>
 </html>
