--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 					</div>	
 				</div>		
 			</div>
+			<a href="segunda_pagina.html">Ir para a Segunda Página</a>
 		</section>
 		<section class="contato container" id="contato">
 			<h2>Contato</h2>
