--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
 					</div>	
 				</div>		
 			</div>
-			<a href="segunda_pagina.html">Ir para a Segunda Página</a>
+
+			
+			<ul>
+				<li><a href="./aulas/sitesla.html">Página 1</a></li>
+				<li><a href="pagina2.html">Página 2</a></li>
+			</ul>
+
+			
 		</section>
 		<section class="contato container" id="contato">
 			<h2>Contato</h2>
