--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 			
 			<ul>
-				<li><a href="./aulas/sitesla.html">Página 1</a></li>
+				<li><a href="aulas/Calculadora 1/sitesla.html">Calculadora 1</a></li>
 				<li><a href="pagina2.html">Página 2</a></li>
 			</ul>
 
