--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 			</figure>
 
 			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas beatae mollitia atque reprehenderit adipisci ea error esse eligendi iusto, earum harum obcaecati maiores reiciendis. Vero quae culpa at aliquam officiis!
+				Bem vindo ao meu site, Meu nome é Wendel, mais conhecido como Tytan
 			</p>
 
 			<p>
-				Est culpa unde quae quisquam at ducimus fuga vel excepturi ex, corporis velit facere expedita itaque sint nemo modi sequi. Nesciunt et tempora cum similique quasi eum enim expedita laudantium.
+				Sou Formado em muitas coisas, gosto de muito da Área da TI
 			</p>
 
 			<p>
-				Itaque odit explicabo natus voluptas! Dolores nostrum reiciendis expedita eveniet explicabo cum laboriosam nam natus itaque eaque necessitatibus deleniti fugit debitis, vitae neque quasi quae dolorem adipisci ipsum illum. Quaerat.
+				No momento Principalmente cursando Ciencia da computação
 			</p>
 
 			<p>
-				Deleniti temporibus itaque assumenda optio odit error ipsa minima, culpa, ipsum dolore perferendis? Ratione quis veniam minus officiis ipsum est, iure ducimus quasi iusto fugiat nostrum rerum adipisci a quas.
+				Muito fã da saga Resident Evil, Assassins Creed, jogos de tabuleiro e RPG, card games principalmente os que eu estou desenvolvendo e Magic The Gathering
 			</p>
 
 		</section>
@@ -95,10 +95,34 @@
 			</div>
 
 			
+			<div class="borda">
+			<h1 class="site-subtitle">Exemplo de Aulas</h1>
+
 			<ul>
-				<li><a href="aulas/Calculadora 1/sitesla.html">Calculadora 1</a></li>
-				<li><a href="pagina2.html">Página 2</a></li>
+				<li><a href="aulas/Calculadora 1/sitesla.html">Calculadora</a></li>
+				<li><a href="aulas/Calculadora 2/listaimagem.html">Calculadora 2</a></li>
+				<li><a href="aulas/Comparação de carros no prompt/Nãoapague.html">Comparação de carros no prompt</a></li>
+				<li><a href="aulas/For/Nãoapague1.html">For</a></li>
+				<li><a href="aulas/Lampada/lamp.html">Lampada</a></li>
+				<li><a href="aulas/Login no Console/listaimagem.html">Login no Console</a></li>
+				<li><a href="aulas/Login/listaimagem.html">Login</a></li>
+				<li><a href="aulas/Mudanca de dia 1/dia.html">Mudança de dia 1</a></li>
+				<li><a href="aulas/Mudanca de dia 2/index2.html">Mudança de dia 2</a></li>
+				<li><a href="aulas/Soma/listaimagem.html">Soma</a></li>
+				<li><a href="aulas/animação/animacao.html">Animação</a></li>
+				<li><a href="aulas/botão/Untitled-1.html">Botão</a></li>
+				<li><a href="aulas/don 0/test.html">Don 1</a></li>
+				<li><a href="aulas/don 1/don.html">Don 2</a></li>
+				<li><a href="aulas/formulário 2/formulário2.html">Formulario 1</a></li>
+				<li><a href="aulas/formulário">Formulario 2</a></li>
+				<li><a href="aulas/imc/IMC.html">IMC</a></li>
+				<li><a href="aulas/lista img/listaimagem.html">Lista de imagens</a></li>
+				<li><a href="aulas/loja de venda de carros/CARROS.html">Loja de Venda de Carros</a></li>
+				<li><a href="aulas/olá mundo/test.html">Olá Mundo</a></li>
+				<li><a href="aulas/segundo grau/bhaskara.html">Segundo Grau</a></li>
+				<li><a href="aulas/sortido/html.html">Sortido</a></li>
 			</ul>
+		</div>
 
 			
 		</section>
