--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 			
 			<div class="borda">
-			<h1 class="site-subtitle">Exemplo de Aulas</h1>
+			<h1 class="site-subtitle">Exemplos de Aulas</h1>
 
 			<ul>
 				<li><a href="aulas/Calculadora 1/sitesla.html">Calculadora</a></li>
