--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</p>
 
 			<p>
-				Muito fã da saga Resident Evil, Assassins Creed, jogos de tabuleiro e RPG, card games principalmente os que eu estou desenvolvendo e Magic The Gathering
+				Muito fã da saga Resident Evil, Assassins Creed, jogos de tabuleiro e RPG, card games principalmente os que sou dev e Magic The Gathering
 			</p>
 
 		</section>
